--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-<body>
+<body style="background-color: rgb(194, 169, 173);">
 
 <h1>My First Heading For HER</h1> <hr>
 <hr>
@@ -18,7 +18,7 @@ You all right my killa
 <img src="https://pbs.twimg.com/profile_images/1601863758699266049/Y1Z9mEKm_400x400.jpg" alt="HER's Tubby NFT"
 height="160"  height="182" <br>
 
-<p style="color:pink;">If you want to understand how she expresses her views on social media, check out this link below.</p>
+<p style="color:brown;">If you want to understand how she expresses her views on social media, check out this link below.</p>
 <a  href="https://twitter.com/olawumi_lwl?s=11&t=z7v-WzxL2VYfWdCdnUgmmw"> HER's Link</a>
 
 </body>
