new saved picture

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@ You all right my killa
 </pre>
 
 <img src="https://pbs.twimg.com/profile_images/1601863758699266049/Y1Z9mEKm_400x400.jpg" alt="HER's Tubby NFT"
-height="160"  height="182" <br>
+height="160"  weight="182" <br>
 
 <p style="color:brown;">If you want to understand how she expresses her views on social media, check out this link below.</p>
 <button>
 <a  href="https://twitter.com/olawumi_lwl?s=11&t=z7v-WzxL2VYfWdCdnUgmmw"> HER's Link</a>
 </button>
 
-<img src="https://twitter.com/messages/900489110548357120-900489110548357120/media/1611860213409226756" height="60" weight="60">
+<img src="https://twitter.com/messages/900489110548357120-900489110548357120/media/1611860213409226756.jpg" height="200" weight="200">
 
 
 </body>
