--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ height="160"  weight="182" <br>
 <a  href="https://twitter.com/olawumi_lwl?s=11&t=z7v-WzxL2VYfWdCdnUgmmw"> HER's Link</a>
 </button>
 
-<img src="https://twitter.com/messages/900489110548357120-900489110548357120/media/1611860213409226756.jpg" height="200" weight="200">
+<img src="C:\Users\AdenHomes Staff\Downloads\image0.jpeg" height="500px" weight="500px">
 
 
 </body>
