--- a/index.html
+++ b/index.html
@@ -2,29 +2,6 @@
 <html>
 <body style="background-color: rgb(194, 169, 173);">
 
-<h1>My First Heading For HER</h1> <hr>
+<h1>Az and HER</h1>
 <hr>
-<p>If you're wondering who HER is, she is Olawumi. <br>A picture of HER is displayed below.</p>
-<p title="HER">Put Your Mouse On ME.</p>
-
-<pre title="Innit Language (For UK) " >
-Wagwan bruv
-
-You good fam?
-
-You all right my killa
-</pre>
-
-<img src="https://pbs.twimg.com/profile_images/1601863758699266049/Y1Z9mEKm_400x400.jpg" alt="HER's Tubby NFT"
-height="160"  weight="182" <br>
-
-<p style="color:brown;">If you want to understand how she expresses her views on social media, check out this link below.</p>
-<button>
-<a  href="https://twitter.com/olawumi_lwl?s=11&t=z7v-WzxL2VYfWdCdnUgmmw"> HER's Link</a>
-</button>
-
-<img src="C:\Users\AdenHomes Staff\Downloads\image0.jpeg" height="500px" weight="500px">
-
-
-</body>
-</html>
+<img src="https://pbs.twimg.com/media/Fl6EYvNXkAErdTO?format=jpg&name=large" height="500px" weight="500px">
