--- a/index.html
+++ b/index.html
@@ -5,3 +5,9 @@
 <h1>Az and HER</h1>
 <hr>
 <img src="https://pbs.twimg.com/media/Fl6EYvNXkAErdTO?format=jpg&name=large" height="500px" weight="500px">
+<br>
+<p> Behind the memory of this picture is a beautiful story to how far we have come and how far we will go. You mean so much to me, I adore you and promise to continue to properly and gently love you, in your love langauge and make you happy. <br>
+    I Love You Baby. To Infinity and Beyond. 
+</p>
+</body>
+</html>
