--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 
 <h1>Az and HER</h1>
 <hr>
-<img src="https://pbs.twimg.com/media/Fl6EYvNXkAErdTO?format=jpg&name=large" height="500px" weight="500px">
+<img src="https://pbs.twimg.com/media/Fl6EYvNXkAErdTO?format=jpg&name=large" height="500px" width="500px">
+<img src="https://pbs.twimg.com/media/Fl6RQN0X0AAiw3Z?format=jpg&name=large" height="300px" width="300px">
+<img scr="https://pbs.twimg.com/media/Fl6RQN5XoAEBwTE?format=jpg&name=large" height="500px" width="500px">
 <br>
-<p> Behind the memory of this picture is a beautiful story to how far we have come and how far we will go. You mean so much to me, I adore you and promise to continue to properly and gently love you, in your love langauge and make you happy. <br>
+<p> Behind the memory of these pictures is a beautiful story of how far we have come and how far we are going. I need you to know that You mean so much to me. I adore you and I promise to continue to properly and gently love you, in your love langauge while making you happy❤️. <br>
     I Love You Baby. To Infinity and Beyond. 
 </p>
 <br>
