--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body style="background-color: rgb(196, 222, 245);">
 
-<h1>Az and HER</h1>
+<h1>Az and HER🌹</h1>
 <hr>
 <img src="https://pbs.twimg.com/media/Fl6EYvNXkAErdTO?format=jpg&name=large" height="500px" width="300px">
 <img src="https://pbs.twimg.com/media/Fl6RQN0X0AAiw3Z?format=jpg&name=large" height="300px" width="300px">
@@ -14,7 +14,7 @@
 <i>
 <p> Behind the memory of these pictures is a beautiful story of how far we have come and how far we are going. To our journey and growth. 
  I need you to know that You mean so much to me. I adore you and I promise to continue to properly and gently love you, in your love langauge while making you happy❤️. I promise I will always provide security and safety for you and us. I will protect you and stand by your side till the end of time. <br>
-<b>I Love You Baby. To Infinity and Beyond. </b>
+<b>I Love You Baby. To Infinity and Beyond💞. </b>
 </p></i>
 <br>
 <p> I am sorry I made You upset</p>
