--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-<body style="background-color: slategrey;">
+<body style="background-color: rgb(204, 204, 204);">
 
 <h1>Az and HER🌹</h1>
 <hr>
