--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <br>
 <img src="https://pbs.twimg.com/media/Fl6RQN6XoAA-90B?format=jpg&name=large" height="450px" width="450px"> <b><p>I will Protect You</p></b>
 <ins>
-<h3 style="text-align:right">❤️❣️💗✨🔥🌹🌈</h3>
+<h4 style="text-align:right">❤️❣️💗✨🔥🌹🌈</h4>
 </ins>
 <i>
 <p> Behind the memory of these pictures is a beautiful story of how far we have come and how far we are going. To our journey and growth. 
@@ -20,7 +20,7 @@
 <b>I Love You Baby. To Infinity and Beyond💞. </b>
 </p></i>
 <br>
-<p> I am sorry I made You upset</p>
+<h2> I am sorry I made You upset</h2>
 <br>
 </body>
 </html>
