--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
+<!doctype html>
+<html lang = "en">
+<head> 
+<title> Cosa Nostra </title>
+<style> 
 
+
+img {
+    max-width: 100%;
+    height: auto;
+    width: auto\9; /* ie8 */
+    display: block;
+}
+
+body {
+background-color: black;
+background-position:50% 50px;
+}
+
+.auidio-container{
+    height:50px;
+    width:100px;
+}
+
+audio {
+    width: 100px;
+    height: 50px;
+}
+</style>
+</head>
+
+<body background style= "background-repeat: no-repeat;
+min-height: 100%
+min-width: 100%
+background-position: 50% 50px;
+background-size: 700px;">
+
+<img src = "Logo.PNG" usemap ="#cosa">
+<map name= "cosa">
+     <area shape="circle" coords="200,300,600"  alt= "nostra"
+    href= "https://twitter.com/wencosa?s=21&t=OGswn9dEOoDSKV7VoOqFtw">
+</map>
+
+<audio controls autoplay loop> 
+<source src= "Cosa audio.mpeg"
+type = "audio/mpeg">
+<source src= "Cosa audio.wav"
+type = "audio/WAV">
+<source src= "Cosa audio.ogg"
+type = "audio/OGG">
+Your Browser Does Not Support The Audio Format.
+</audio>
+
+
+
+
+
+</body>
+</html>
