--- a/index.html
+++ b/index.html
@@ -1,59 +1,34 @@
 <!doctype html>
-<html lang = "en">
-<head> 
-<title> Cosa Nostra </title>
-<style> 
-
-
-img {
-    max-width: 100%;
-    height: auto;
-    width: auto\9; /* ie8 */
-    display: block;
-}
-
-body {
-background-color: black;
-background-position:50% 50px;
-}
-
-.auidio-container{
-    height:50px;
-    width:100px;
-}
-
-audio {
-    width: 100px;
-    height: 50px;
-}
-</style>
-</head>
-
-<body background style= "background-repeat: no-repeat;
-min-height: 100%
-min-width: 100%
-background-position: 50% 50px;
-background-size: 700px;">
-
-<img src = "Logo.PNG" usemap ="#cosa">
-<map name= "cosa">
-     <area shape="circle" coords="200,300,600"  alt= "nostra"
-    href= "https://twitter.com/wencosa?s=21&t=OGswn9dEOoDSKV7VoOqFtw">
-</map>
-
-<audio controls autoplay loop> 
-<source src= "Cosa audio.mpeg"
-type = "audio/mpeg">
-<source src= "Cosa audio.wav"
-type = "audio/WAV">
-<source src= "Cosa audio.ogg"
-type = "audio/OGG">
-Your Browser Does Not Support The Audio Format.
-</audio>
-
-
-
-
-
+<html lang="en">
+ <head>
+    <meta charset="utf-8">
+    <title>
+        Hello
+    </title>
+ </head>
+ <body style="background-color: rgb(204, 204, 255);">
+    <b>
+    <h1>Az and HER🌹</h1>
+    </b>
+    <hr>
+    <img src="https://pbs.twimg.com/media/Fl6EYvNXkAErdTO?format=jpg&name=large" height="600px" width="500px"> <b><p> I will stand by You.</p></b>
+    <br>
+    <img src="https://pbs.twimg.com/media/Fl6RQN5WAAA45J-?format=jpg&name=large" height="500px" width="500px"><b><p> I miss our kisses</p></b>
+    <img src="https://pbs.twimg.com/media/Fl6RQN5XoAEBwTE?format=jpg&name=large" height="400px" width="400px">
+    <br>
+    <img src="https://lh3.googleusercontent.com/SONhukNjMcw9FzQTI0Dk3qVp2kRcXC9PLvPu9RvftJVvPGbwBRo9bMUj1wZpUb1VUaeFyXk7m7J8TBn8eJqnXPw-N_8E_OhmBYXoqwjcGrNL3PB3Vv6hB1SMKSciSCZvEieyGRYcHGWYZlot9EaJ7XZud1Yo5d1pEjAt9lpQRr7ZXta2gEVy4U8BO6b6cHaeoKjBKD_vx_M_ZheeCaiRxqZ10SF95jBOQL0UsguqOynmYmacNue18Sy5O8WI0hjfI4h8ARheaXGbgBVa03wkD3grH5PcNwCXmOcVDKIDbC_K3TxBKaa7EO_v_QiXo3jQgH_gPmktQtOz0Mj8MEBs9wtopROsEyOoJZ5Yu38RtOadjGzNJiC9-ye58rZInrXKUF8agvIXBOR89F4tx9IVlc3xizXGEWqV_hcu87uSf-5icmpY0I0w0GG5gL8HrxzElPajcjrjKj0EmajHd_TK7ei_Q_NZulBuxThEodvSsCtIHhiPVBvFq4SQatSuJmRLq0MQOVigYIzm_dlRzRtZSqJoY_ZqZqm5BCE3M4bQfa6b9gMa6rlcn7mzsS4dXaBPW-cQRfOKhC2eRS_yRoQq3BsgzQeS-vuqDaYPbn_OLEVzQzKbRwbwxSd0priFflp8gtHN9q4AgqO5fEZhcxZoQ4BL11L-yCfGrFA8XHFIt7xikxNKd50C8EfFvderOvNYemrX7iMS2N4X-pk6dEPPJYdDxiRWiTzlUjbLXu9CI8vvADjYUaI1rJJFFCvzIMZBFOrcJjdpRhJZfL-jS0uxMFZZC3e8NAHBQ-qNjRwStuvzeltNB4pF9hlK-36HlrOw5c4QfMKPIur5Bg-xSVDpUQtv7ZAgMuarqlmq537rhqVXfPP3MEQJZO9-zyQM9EuN73K7J1o6XaGkGGxbr2cit9ZDYQKCtOKtIY0ERwzX2PJdnov-MA=w360-h640-no?authuser=0" height="400px" width="300px">
+    <img src="https://pbs.twimg.com/media/Fl6RQN6XoAA-90B?format=jpg&name=large" height="500px" width="400px"> <b><p>I will Protect You</p></b>
+    <ins>
+    <h4 style="text-align:right">❤️❣️💗✨🔥🌹🌈</h4>
+    </ins>
+    <i>
+    <p> Behind the memory of these pictures is a beautiful story of how far we have come and how far we are going. To our journey and growth. 
+     I need you to know that You mean so much to me. I adore you and I promise to continue to properly and gently love you, in your love langauge while making you happy❤️. I promise I will always provide security and safety for you and us. I will protect you and stand by your side till the end of time. <br>
+    <b>I Love You Baby. To Infinity and Beyond💞. </b>
+    </p></i>
+    <br>
+    <h2> I am sorry I made You upset</h2>
+    <br>
+Hello
 </body>
 </html>
